add webapp files